# media-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  PKGBUILD  README.md  _typos.toml  build.rs  index.html  index.ts  init.sql  media-server.install  media-server.service  package-lock.json  package.json  reset_db.sh  server-configuration.json  tsconfig.json
.github/workflows/: ci.yaml  ci.yml  deploy.yaml  release.yaml
.sqlx/: query-00b9409358d22ad104b662bb5b14b6bac2d7f726e19eda9f5a7fe9a4e17fc29a.json  query-02f29306862113862cd46cf66207efd3e210c50a20c569d673f1400cd96a46f3.json  query-0673ac30d85594de3dd9580c520b6f0031c20e682f81985a0f03ffcde7c33d52.json  query-080a30f347ba811033fba4f49e5bc3aa19eb17e9139864935abfaea66477adea.json  query-08c06130a562071caf9c3c01c4093a428bc885f2a731b748fba0598c72881e25.json  query-0a1bb7fc78384a1b199058d2aca028fbe4e03325755945bfe7fddef71f906c03.json  query-0a73231c5a7db36db7446c60eedbb24496c590740c734414a5c2ae3d9a202e24.json  query-0ed7bcde0a42dc1a673042099481646dccec78fe25327c6e5931e604e480e912.json  query-11803c3afdd9d5f595dda93faf059d1a4b41ca90fc164f79fde1f274789dd46c.json  query-11b9999e6fdd8fa875233c4d5b6a237489943b938e3efbd0aac3b05a5cab1d8a.json  query-11bdbb5f53e618959ef58a6bc465f97e04fca65eb20c7eee334f028d2006b1e1.json  query-12ddbcb619537096271a3bd14e9032812be63957e22ce5939faa6e2370a67452.json  query-16977558adf30f750337d03154b185fc7830646164fba178be1be3d095832932.json  query-16ba7dec7ab95089d5ee222f1ab92b0716edc9a997b81c844c38c97ba2bef9da.json  query-17264de24a444ab92fec1a627a94db9f695594c53e1523009ab433621d00036e.json  query-18fd8f2b094be7cec10f8470d06ba33a6d8c582b38c742b118cbfda6b323ef54.json  query-19bc780bf49aa802c2a5077280389168cc60e6b8c2f4fe72042070c5c28a05e7.json  query-1c0edca9318a433169455c6384231232f2cab1cae33a13044ed95b9c7104b794.json  query-227cdd852d0b2895846e89c58d3980db30c21359848de3d2fd4f99a48d0c421d.json  query-242f4b0d348a0b25f294015bfc5e88f05fe6f3ee2cbba803ac0963734f9fc476.json  query-2491a089e44483af934aa87e0f3bd39d89a23543a3297100d2379d79e1a3dd50.json  query-251f54f11a977b246b14c5442d937006b80f3d4513cef71d57e25c74803fa74a.json  query-25a001dc5c9393480b70d0495ffd3ce984d246b6c29804db9e96013f049a024e.json  query-29549dc879e5b25e5f997084313a7ea2b416e2011c5b1e86f19f6b1100ebfd90.json  query-2b4e0207f9b21c634f50338984ebf8017beba3581688606acc9a90b1e611849d.json  query-2c5152982ae3eaca30f557107cff5e11b54af0b90bd8a8fe801e8ca8458520cb.json  query-2cae6548cf0a2056b08bc7833616436eabd6199d848da442067141c8dc394903.json  query-2d29fa54604653050fde369fa57ff93ff7433c832e97334e7b2c9e58f61cc0b5.json  query-2d763fae04943ab8aa192a4a7dddc1575f9aa444cbb0510103676c20de47b184.json  query-2ffe2b72a2a0fdddcbbf41276f049d669ce912e79b6fd984a0776a105bb59994.json  query-32409e44a0df655b919bd938e25c894862560d3749c8063017e5e1bd04ba04e8.json  query-325e05567bd5f8d10daed5ee2c5bb12cd34d717bb653d2b6ff9e7aa6f341e508.json  query-33ce1e581d1dda54a0b495adb9646d73dadfd8aa4a7481b52dcaac20c33b7479.json  query-3487f8868bd574750bc42b83b30cdce7eee4c6c1726482ab476523694866de7f.json  query-34af891353b6a9be09d8ab60902cc3c9be6ba2399a918065c7f8a64b7cb19813.json  query-3518add257879f0869f4b98d7240ef2273ab49b0fe35eb1cd222a3ddb2a75857.json  query-3646b6a7cf64bc25525bed3a14b469801ee02709149ea7538f348c1d6fd4b14b.json  query-36700f287f844781e4ec532cd11784a3c7b3a9c436dc31e707ee36b566d7d764.json  query-37a5410babaa18ce9ecc976ce1f0282096e246b127139349715d6122046c516c.json  query-387e8cdba96584f05188a2af707caf0926d30e542af6c991f1366e8a6fca3358.json  (+135 more)
media-intro/: Cargo.toml
media-intro/src/: config.rs  gaussian.rs  gradient.rs  lib.rs
migrations/: 20240901110445_init.sql  20241130134745_torrents.sql  20250110143317_system_id.sql  20250421172342_upnp_uuid.sql  20250713152906_original_locale.sql  20250713153012_season_title.sql  20260304223441_initial_schema.sql  20260509201834_alter_content_genres.sql
packaging/deb/: postinst
packaging/systemd/: media-server.env  media-server.service  media-server.sysusers
src/: GetLibrary.ts  ProcessFile.ts  admin_api.rs  app_state.rs  config.rs  db.rs  ffmpeg.rs  ffmpeg_abi.rs  file_browser.rs  file_watcher.rs  intro_detection.rs  lib.rs  library.rs  main.rs  metadata_provider.rs  movie_file.rs  posters.rs  process_file.rs  progress.rs  public_api.rs  scan.rs  serve_content.rs  serve_file.rs  serve_previews.rs  serve_subs.rs  show_file.rs  source.rs  test.rs  testing.rs  tmdb_api.rs  torrent.rs  tracing.rs  tray.rs  utils.rs  watch.rs  ws.rs
src/api/: file_browser.rs  history.rs  intros.rs  mod.rs  server.rs  subtitles.rs  torrent.rs
src/config/: capabilities.rs  cli_args.rs  config_file.rs  mod.rs  resources.rs
src/db/: mod.rs  query_builders.rs
torrent/: Cargo.toml  README.md  sample.torrent
torrent/examples/: cli.rs  codecrafters.rs  resolve_magnet_link.rs  simple_download.rs  validate.rs  verify.rs
torrent/src/: ban_list.rs  bitfield.rs  download.rs  file.rs  length_calculator.rs  lib.rs  magnet.rs  metric.rs  peer_listener.rs  peer_storage.rs  peers.rs  resumability.rs  scheduler.rs  seeder.rs  session.rs  storage.rs  tracker.rs  utils.rs
torrent/src/download/: mod.rs  peer.rs  progress_consumer.rs
torrent/src/piece_picker/: linear.rs  mod.rs  rare_first.rs
torrent/src/progress/: consumer.rs  events.rs  full.rs  mod.rs
torrent/src/protocol/: dht.rs  extension.rs  mod.rs  peer.rs  pex.rs  tracker.rs  ut_metadata.rs
torrent/src/session/: config.rs  mod.rs  session_message.rs  tick_context.rs  torrent_list.rs
torrent/src/storage/: error.rs  hash_verification.rs  memory_store.rs  mod.rs  parts.rs  revalidation.rs  sink.rs
upnp/: Cargo.toml  README.md
upnp/examples/: av_transport_cli.rs  igd_cli.rs
upnp/src/: action.rs  av_transport.rs  connection_manager.rs  content_directory.rs  device_description.rs  internet_gateway.rs  lib.rs  router.rs  search_client.rs  service.rs  service_client.rs  service_variables.rs  ssdp.rs  urn.rs
upnp/src/content_directory/: class.rs  error.rs  mod.rs  properties.rs
upnp/src/eventing/: mod.rs
upnp/src/templates/: mod.rs  service_description.rs
(+105 files in other folders)
