[workspace]
members = [".", "torrent", "upnp"]

[package]
name = "media-server"
version = "0.4.5"
edition = "2024"

[features]
windows-tray = ["dep:tray-icon", "dep:open", "dep:image", "dep:winit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13", features = ["full"] }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros", "tracing", "multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
time = { version = "0.3.37", features = ["serde", "parsing"] }
tracing = "0.1.41"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
rand = "0.9.0"
lru = "0.13.0"
sysinfo = "0.33.1"
async-trait = "0.1.86"
clap = { version = "4.5.29", features = ["derive"] }

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "tracing", "multipart", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
time = { workspace = true, features = ["serde", "parsing"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "v1", "serde"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["serde_derive"] }
rand = { workspace = true }
lru = { workspace = true }
sysinfo = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
base64 = "0.22.1"
bytes = "1.10.0"
crc32fast = { version = "1.4.2", features = ["nightly"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
notify = { version = "8.0.0", default-features = false, features = ["macos_kqueue"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "time", "uuid", "sqlite"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "serde_json", "serde", "time", "fmt", "env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "time", "url", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde_plain = "1.0.2"
toml_edit = { version = "0.22.24", features = ["serde"] }
test-log = "0.2.17"
ffmpeg-next = { version = "7.1.0" }
torrent = { path = "./torrent" }
upnp = { path = "./upnp" }
media-intro = { path = "./media-intro" }

# Windows dependencies
tray-icon = { version = "0.19.2", optional = true }
open = { version = "5.3.2", optional = true }
image = { version = "0.25.5", optional = true }
winit = { version = "0.30.9", optional = true }
