[workspace]
members = [".", "torrent", "upnp"]

[package]
name = "media-server"
version = "0.8.0"
edition = "2024"
description = "Self-hosted media server"
license = "GPL-3.0-or-later"
repository = "https://github.com/dog4ik/media-server"

[features]
default = ["jemalloc"]
windows-tray = ["dep:tray-icon", "dep:open", "dep:image", "dep:winit"]
jemalloc = ["dep:tikv-jemallocator"]

[package.metadata.deb]
maintainer = "Vadim Gerasimov <angryvadik@gmail.com>"
section = "video"
priority = "optional"
depends = "$auto, ffmpeg"
extended-description = """\
A self-hosted media server for organizing and streaming \
your movie and TV show libraries, with metadata fetching, transcoding and DLNA \
support."""
conf-files = ["/etc/media-server/media-server.env"]
# create the `media-server` system user via systemd-sysusers before the service is enabled/started.
maintainer-scripts = "packaging/deb"
assets = [
  [
    "target/release/media-server",
    "usr/bin/",
    "755",
  ],
  [
    "dist/**/*",
    "usr/share/media-server/dist/",
    "644",
  ],
  [
    "packaging/systemd/media-server.env",
    "etc/media-server/media-server.env",
    "644",
  ],
  [
    "packaging/systemd/media-server.sysusers",
    "usr/lib/sysusers.d/media-server.conf",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/media-server/README.md",
    "644",
  ],
]

[package.metadata.deb.systemd-units]
unit-scripts = "packaging/systemd"
unit-name = "media-server"
enable = true
start = true
restart-after-upgrade = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["full"] }
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros", "tracing", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie", "file-stream", "query"] }
time = { version = "0.3.37", features = ["serde-human-readable"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
rand = "0.10.0"
lru = "0.16.3"
sysinfo = "0.38.2"
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
test-log = "0.2.19"

[dependencies]
# Windows dependencies
tray-icon = { version = "0.21.3", optional = true }
open = { version = "5.3.3", optional = true }
image = { version = "0.25.9", optional = true }
winit = { version = "0.30.12", optional = true }

torrent = { path = "./torrent" }
upnp = { path = "./upnp" }
media-intro = { path = "./media-intro" }

tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "tracing", "multipart", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
time = { workspace = true, features = ["serde-human-readable"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["serde_derive"] }
rand = { workspace = true }
lru = { workspace = true }
sysinfo = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
base64 = "0.22.1"
bytes = "1.11.1"
dirs = "6.0.0"
dotenvy = "0.15.7"
log = { version = "0.4", features = ["release_max_level_info"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "macros",
  "migrate",
  "json",
  "time",
  "uuid",
  "sqlite",
] }
tokio-stream = "0.1.18"
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing-subscriber = { version = "0.3.22", features = [
  "json",
  "serde_json",
  "serde",
  "time",
  "fmt",
  "env-filter",
] }
utoipa = { version = "5.4.0", features = ["axum_extras", "time", "url", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_plain = "1.0.2"
ffmpeg-next = { version = "8.1.0" }
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.32.0", features = ["metrics", "grpc-tonic"] }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", optional = true, features = [
  "unprefixed_malloc_on_supported_platforms",
] }
