[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["serde_derive"] }
anyhow = "1.0.82"
bytes = { version = "1.6.0", features = ["serde"] }
sha1 = "0.10.6"
hex = "0.4.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
reqwest = "0.12.4"
rand = "0.8.5"
tracing = "0.1.40"
tracing-test = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["json", "serde_json", "serde", "time", "fmt", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sysinfo = "0.30.12"
