[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }

[dependencies]
lru = { workspace = true }
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"
serde = { workspace = true }
anyhow = { workspace = true }
bytes = { version = "1.6.0", features = ["serde"] }
sha1 = "0.10.6"
hex = "0.4.3"
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["full"] }
reqwest = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-test = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["json", "serde_json", "serde", "time", "fmt", "env-filter"] }
uuid = { workspace = true }
sysinfo = { workspace = true }
flume = { version = "0.11.0", features = ["async"] }
bendy = "0.3.3"
