[package]
name = "upnp"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "tracing"] }
axum-extra = { workspace = true, features = ["typed-header"] }
time = { workspace = true, features = ["serde-human-readable"] }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
rand = { workspace = true }
socket2 = "0.6.2"
quick-xml = { version = "0.39.2", features = ["serde", "serialize"] }
